# Work

./: qmake
c++/opencvpractice/: CMakeLists.txt
c++/opencvpractice/src/: main.cpp
c++/server_client/: client.pro  server.pro  server.pro.user.56f2b02
c++/server_client/inc/: server.h
c++/server_client/src/client/: client.cpp  client.sh  client_lib.sh
c++/server_client/src/server/: server.cpp  server.sh
hobby/board_game/: main.py  prac.py  practice.py
hobby/board_game/example_env/: __init__.py  example_env.py  test.csv
hobby/board_game/players/: __init__.py  oppenent.py  player.py
opencv/: drawing.py  getting_start_with_image.py  getting_start_with_videos.py  me.avi
